--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,9 @@ github_username:  jekyll
 
 # Build settings
 #theme: minima
-#theme: jekyll-theme-hydure
+theme: jekyll-theme-hydure
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
-remote_theme: zivong/jekyll-theme-hydure
 
 # Exclude from processing.
 # The following items will not be processed, by default.
