--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
 install:
   - gem install jekyll
   - gem install jekyll-theme-hydure
+  - gem install addressable
 
 # Build Jekyll blog
 script:
