--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - gem install jekyll
   - gem install jekyll-theme-hydure
   - gem install addressable
+  - gem install rexml
 
 # Build Jekyll blog
 script:
