--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: mann.gdn - Bits and bobs.
+email: daniel@mann.gdn
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal technology blog, posting things I find useful, tutorials, guides and general errors I encounter. Hosted on AWS S3.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://mann.gdn/" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: dejmann
 
 # Build settings
-#theme: minima
 theme: jekyll-theme-hydure
 plugins:
   - jekyll-feed
